--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/nova": "~1.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "silvanite/novatoolpermissions": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
